[tool.poetry]
name = "square-brackets-streamsync-bug-example"
version = "0.1.0"
description = ""
authors = ["Gunnar Vartdal <gunnarvartdal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamsync = "v0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
